[package]
name = "game-room"
version = "0.1.0"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
anyhow = "1.0.38"
bytes = "0.5.6"
crossbeam-channel = "0.4.4"
crossbeam-queue = "0.3.1"
env_logger = "0.8.2"
futures = "0.3.12"
log = "0.4.14"
num_enum = "0.5.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
structopt = "0.3.21"
tapa-trait-serde = "0.1.2"
tokio = { version = "0.2.25", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
